scale site on mobile as desktop version with fixed viewport width

--- a/src/styles/components/_equation.scss
+++ b/src/styles/components/_equation.scss
@@ -7,4 +7,5 @@
   color: white;
   padding: $componentPadding 0;
   border-radius: $componentBorderRadius;
+  font-size: 0.8vw;
 }
