--- a/src/styles/components/_settings.scss
+++ b/src/styles/components/_settings.scss
@@ -35,18 +35,18 @@
 }
 
 .formInputScore{
-  width: 30%;
+  width: 25%;
   display: inline-block;
   text-align: left;
   margin-top: 20px;
-  margin-left: 1.5%;
-  margin-right: 1.5%;
+  margin-left: 3%;
+  margin-right: 3%;
 }
 
 .userInput{
   width: 100%;
   height: 30px;
-  font-size: 17px;
+  font-size: 1vw;
 }
 
 .inputField{
@@ -69,7 +69,7 @@
 }
 .sequenceInput{
   border-radius: 5px;
-  width: 49%;
+  width: 45%;
   padding-left: 5px;
   margin-right: 1%;
 }
@@ -80,3 +80,5 @@
   color: white;
   cursor: pointer;
 }
+
+
